# claudedeck

./: .gitignore  DETAILS.md  LICENSE  README.md  demo.py  pyproject.toml  verify_proof.py
.claude/: CLAUDE.md
claudedeck/: __init__.py  __main__.py  anchoring.py  c2pa_export.py  core.py  hook.py  integrity.py  local_anchor.py  proof.py  settings.py  signing.py  snapshot.py  vault.py
tests/: conftest.py  test_airlock_boundaries.py  test_anchor_attacks.py  test_anchoring.py  test_atomic_write.py  test_attribution.py  test_attribution_matrix.py  test_c2pa_export.py  test_canonical_edge_cases.py  test_chain_attacks.py  test_cli.py  test_core.py  test_hook.py  test_integrity.py  test_local_anchor.py  test_malformed_input.py  test_proof.py  test_settings.py  test_show.py  test_signing.py  test_spoofing.py  test_tool_interactions.py  test_vault.py
