[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claudedeck"
version = "0.1.0"
description = "Cryptographic provenance for Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Joseph D Viviano"},
]
dependencies = []

[project.optional-dependencies]
vault = ["cryptography"]
dev = ["pytest", "cryptography"]

[project.scripts]
claudedeck = "claudedeck.__main__:main"

[tool.setuptools.packages.find]
include = ["claudedeck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
